# churn-analytcs

./: README.md  pyproject.toml
src/streamlit/: main.py
