[project]
name = "customer-churn-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Lucas",email = "fabiolucamz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.52.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
